# kaleidoscope

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  compiler.cpp
ast/: ast.cpp  ast.h
lexer/: lexer.cpp  lexer.h
llvm/: llvm.cpp  llvm.h
parser/: parser.cpp  parser.h
scripts/: kaleidoscope-wrapper
src/: ast.cpp  ast.h  compiler.cpp  debug.cpp  debug.h  kaleidoscopeJIT.h  lexer.cpp  lexer.h  llvm.cpp  llvm.h  parser.cpp  parser.h  runtime.cpp  runtime.h
tests/: test.cpp  test_entry.in  test_fib.in  test_fib_exe.in  test_fib_iter.in  test_full.in  test_mandelbrot.in  test_print.in
